{
  "version": 4,
  "terraform_version": "1.5.0",
  "serial": 19,
  "lineage": "d8d1035c-975c-135f-fc81-df6da2dd4c82",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "south-IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:506624277343:internet-gateway/igw-00c6e6be05c67b7e8",
            "id": "igw-00c6e6be05c67b7e8",
            "owner_id": "506624277343",
            "tags": {
              "Name": "south-IG"
            },
            "tags_all": {
              "Name": "south-IG"
            },
            "vpc_id": "vpc-04dc6b1ee820c2f18"
          },
          "dependencies": [
            "aws_vpc.south-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "south-loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:506624277343:loadbalancer/app/cardwebsite/2e8e4c371a580121",
            "arn_suffix": "app/cardwebsite/2e8e4c371a580121",
            "desync_mitigation_mode": "defensive",
            "dns_name": "cardwebsite-1917581424.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:506624277343:loadbalancer/app/cardwebsite/2e8e4c371a580121",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cardwebsite",
            "preserve_host_header": false,
            "security_groups": [
              "sg-06098a47273b627ba"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0dd8e35540fcc7849"
              },
              {
                "subnet_id": "subnet-0f7e5348b83f16c05"
              }
            ],
            "subnets": [
              "subnet-0dd8e35540fcc7849",
              "subnet-0f7e5348b83f16c05"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-04dc6b1ee820c2f18",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.south-SG",
            "aws_subnet.south-subnet3",
            "aws_subnet.south-subnet4",
            "aws_vpc.south-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "south-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:506624277343:listener/app/cardwebsite/2e8e4c371a580121/36de175f6e00fc0a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:506624277343:targetgroup/cardwebsite/55dd7bbfaf630bf2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:506624277343:listener/app/cardwebsite/2e8e4c371a580121/36de175f6e00fc0a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:506624277343:loadbalancer/app/cardwebsite/2e8e4c371a580121",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.south-loadbalancer",
            "aws_lb_target_group.south-TG",
            "aws_security_group.south-SG",
            "aws_subnet.south-subnet3",
            "aws_subnet.south-subnet4",
            "aws_vpc.south-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "south-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:506624277343:targetgroup/cardwebsite/55dd7bbfaf630bf2",
            "arn_suffix": "targetgroup/cardwebsite/55dd7bbfaf630bf2",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:506624277343:targetgroup/cardwebsite/55dd7bbfaf630bf2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cardwebsite",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "south-TG"
            },
            "tags_all": {
              "Name": "south-TG"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-04dc6b1ee820c2f18"
          },
          "dependencies": [
            "aws_vpc.south-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "south-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:506624277343:route-table/rtb-0c7e2524f77d3ffc6",
            "id": "rtb-0c7e2524f77d3ffc6",
            "owner_id": "506624277343",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00c6e6be05c67b7e8",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "south-RT"
            },
            "tags_all": {
              "Name": "south-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-04dc6b1ee820c2f18"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.south-IG",
            "aws_vpc.south-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "south-RTA1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01250eeb65d55a1fa",
            "route_table_id": "rtb-0c7e2524f77d3ffc6",
            "subnet_id": "subnet-0dd8e35540fcc7849"
          },
          "dependencies": [
            "aws_internet_gateway.south-IG",
            "aws_route_table.south-RT",
            "aws_subnet.south-subnet3",
            "aws_vpc.south-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "south-RTA2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0677242a8441b3022",
            "route_table_id": "rtb-0c7e2524f77d3ffc6",
            "subnet_id": "subnet-0f7e5348b83f16c05"
          },
          "dependencies": [
            "aws_internet_gateway.south-IG",
            "aws_route_table.south-RT",
            "aws_subnet.south-subnet4",
            "aws_vpc.south-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "south-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:506624277343:security-group/sg-06098a47273b627ba",
            "description": "Allow SSH and HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06098a47273b627ba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from PC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from PC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "south-SG",
            "name_prefix": "",
            "owner_id": "506624277343",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "south-SG"
            },
            "tags_all": {
              "Name": "south-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-04dc6b1ee820c2f18"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.south-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "south-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:506624277343:subnet/subnet-0d7d007f86b33263c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7d007f86b33263c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "506624277343",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "south-subnet1"
            },
            "tags_all": {
              "Name": "south-subnet1"
            },
            "vpc_id": "vpc-04dc6b1ee820c2f18"
          },
          "dependencies": [
            "aws_vpc.south-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "south-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:506624277343:subnet/subnet-075d1336fd03475ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075d1336fd03475ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "506624277343",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "south-subnet2"
            },
            "tags_all": {
              "Name": "south-subnet2"
            },
            "vpc_id": "vpc-04dc6b1ee820c2f18"
          },
          "dependencies": [
            "aws_vpc.south-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "south-subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:506624277343:subnet/subnet-0dd8e35540fcc7849",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd8e35540fcc7849",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "506624277343",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "south-subnet3"
            },
            "tags_all": {
              "Name": "south-subnet3"
            },
            "vpc_id": "vpc-04dc6b1ee820c2f18"
          },
          "dependencies": [
            "aws_vpc.south-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "south-subnet4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:506624277343:subnet/subnet-0f7e5348b83f16c05",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7e5348b83f16c05",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "506624277343",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "south-subnet4"
            },
            "tags_all": {
              "Name": "south-subnet4"
            },
            "vpc_id": "vpc-04dc6b1ee820c2f18"
          },
          "dependencies": [
            "aws_vpc.south-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "south-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:506624277343:vpc/vpc-04dc6b1ee820c2f18",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0303debe166a28809",
            "default_route_table_id": "rtb-0f8e8f9e87088729e",
            "default_security_group_id": "sg-0b60d36d277d26bb4",
            "dhcp_options_id": "dopt-05ac533af649b7c62",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04dc6b1ee820c2f18",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f8e8f9e87088729e",
            "owner_id": "506624277343",
            "tags": {
              "Name": "south-vpc"
            },
            "tags_all": {
              "Name": "south-vpc"
            }
          }
        }
      ]
    }
  ]
}